// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vue language core compatibility > should bundle Vue declarations with @vue/language-core 3.1.5 1`] = `
{
  "bundledDts": "import { PublicProps } from 'vue';
import { VNode } from 'vue';

declare const __VLS_export: <T extends string>(__VLS_props: NonNullable<Awaited<typeof __VLS_setup>>["props"], __VLS_ctx?: __VLS_PrettifyLocal<Pick<NonNullable<Awaited<typeof __VLS_setup>>, "attrs" | "emit" | "slots">>, __VLS_expose?: NonNullable<Awaited<typeof __VLS_setup>>["expose"], __VLS_setup?: Promise<{
    props: __VLS_PrettifyLocal<{
        msg: T;
    }> & PublicProps & (typeof globalThis extends {
        __VLS_PROPS_FALLBACK: infer P;
    } ? P : {});
    expose: (exposed: {}) => void;
    attrs: any;
    slots: {};
    emit: {};
}>) => VNode & {
    __ctx?: Awaited<typeof __VLS_setup>;
};

declare const __VLS_export_2: any;

declare type __VLS_PrettifyLocal<T> = {
    [K in keyof T as K]: T[K];
} & {};

export declare const App: typeof __VLS_export;

declare const _default: typeof __VLS_export_2;

export declare const notifyFn: (props: InstanceType<typeof _default>["$props"]) => void;

export { }
",
  "version": "3.1.5",
}
`;

exports[`vue language core compatibility > should bundle Vue declarations with @vue/language-core 3.3.3 1`] = `
{
  "bundledDts": "import { PublicProps } from 'vue';
import { VNode } from 'vue';

declare const __VLS_export: <T extends string>(__VLS_props: NonNullable<Awaited<typeof __VLS_setup>>["props"], __VLS_ctx?: __VLS_PrettifyLocal<Pick<NonNullable<Awaited<typeof __VLS_setup>>, "attrs" | "emit" | "slots">>, __VLS_exposed?: NonNullable<Awaited<typeof __VLS_setup>>["expose"], __VLS_setup?: Promise<{
    props: PublicProps & __VLS_PrettifyLocal<{
        msg: T;
    }> & (typeof globalThis extends {
        __VLS_PROPS_FALLBACK: infer P;
    } ? P : {});
    expose: (exposed: {}) => void;
    attrs: any;
    slots: {};
    emit: {};
}>) => VNode & {
    __ctx?: Awaited<typeof __VLS_setup>;
};

declare const __VLS_export_2: any;

declare type __VLS_PrettifyLocal<T> = (T extends any ? {
    [K in keyof T]: T[K];
} : {
    [K in keyof T as K]: T[K];
}) & {};

export declare const App: typeof __VLS_export;

declare const _default: typeof __VLS_export_2;

export declare const notifyFn: (props: InstanceType<typeof _default>["$props"]) => void;

export { }
",
  "version": "3.3.3",
}
`;

exports[`vue language core compatibility > should emit Vue declarations with @vue/language-core 3.1.5 1`] = `
{
  "appDts": "declare const __VLS_export: <T extends string>(__VLS_props: NonNullable<Awaited<typeof __VLS_setup>>["props"], __VLS_ctx?: __VLS_PrettifyLocal<Pick<NonNullable<Awaited<typeof __VLS_setup>>, "attrs" | "emit" | "slots">>, __VLS_expose?: NonNullable<Awaited<typeof __VLS_setup>>["expose"], __VLS_setup?: Promise<{
    props: __VLS_PrettifyLocal<{
        msg: T;
    }> & import('vue').PublicProps & (typeof globalThis extends {
        __VLS_PROPS_FALLBACK: infer P;
    } ? P : {});
    expose: (exposed: {}) => void;
    attrs: any;
    slots: {};
    emit: {};
}>) => import('vue').VNode & {
    __ctx?: Awaited<typeof __VLS_setup>;
};
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_PrettifyLocal<T> = {
    [K in keyof T as K]: T[K];
} & {};
",
  "entryDts": "export * from './main.js'
export {}
",
  "version": "3.1.5",
}
`;

exports[`vue language core compatibility > should emit Vue declarations with @vue/language-core 3.3.3 1`] = `
{
  "appDts": "declare const __VLS_export: <T extends string>(__VLS_props: NonNullable<Awaited<typeof __VLS_setup>>["props"], __VLS_ctx?: __VLS_PrettifyLocal<Pick<NonNullable<Awaited<typeof __VLS_setup>>, "attrs" | "emit" | "slots">>, __VLS_exposed?: NonNullable<Awaited<typeof __VLS_setup>>["expose"], __VLS_setup?: Promise<{
    props: import('vue').PublicProps & __VLS_PrettifyLocal<{
        msg: T;
    }> & (typeof globalThis extends {
        __VLS_PROPS_FALLBACK: infer P;
    } ? P : {});
    expose: (exposed: {}) => void;
    attrs: any;
    slots: {};
    emit: {};
}>) => import('vue').VNode & {
    __ctx?: Awaited<typeof __VLS_setup>;
};
declare const _default: typeof __VLS_export;
export default _default;
type __VLS_PrettifyLocal<T> = (T extends any ? {
    [K in keyof T]: T[K];
} : {
    [K in keyof T as K]: T[K];
}) & {};
",
  "entryDts": "export * from './main.js'
export {}
",
  "version": "3.3.3",
}
`;
